// Vitest Snapshot v1

exports[`Avatar Component > props.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Avatar Component > props.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Avatar Component > props.shape is equal to circle 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar Component > props.shape is equal to round 1`] = `
<div
  class="t-avatar t-avatar--round"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar Component > slots.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar Component > slots.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to left-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-left"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to right-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup Component > props.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <img
      alt=""
      src="https://tdesign.gtimg.com/site/avatar.jpg"
    />
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`AvatarGroup Component > slots.collapse-avatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <img
      alt=""
      src="https://tdesign.gtimg.com/site/avatar.jpg"
    />
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
  
</div>
`;

exports[`AvatarGroup Component > slots.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <img
      alt=""
      src="https://tdesign.gtimg.com/site/avatar.jpg"
    />
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
  
</div>
`;
